feat: create snapshots
